--- a/src/components/main-section/MainSection.module.scss
+++ b/src/components/main-section/MainSection.module.scss
@@ -1,7 +1,7 @@
 @import "../../breakpoints.scss";
 
-.container {
-  @apply relative mt-36 bg-gray/20;
+.formContainer {
+  @apply relative mt-36 bg-gray/15 pb-20;
 
   .form {
     @apply absolute -top-20 left-0 right-0 mx-auto flex h-44 flex-col items-center justify-center gap-x-4 gap-y-8 rounded-lg bg-dark-Violet bg-cover bg-center bg-no-repeat px-6 sm:h-40 md:-top-16 md:h-32 md:flex-row md:justify-start md:px-12 lg:-top-20 lg:h-40 lg:gap-x-6 lg:px-16;
@@ -81,6 +81,61 @@
           width: 90%;
         }
       }
+    }
+  }
+}
+
+.statisticsContainer {
+  @apply mt-16 sm:mt-28;
+
+  .heroTitle {
+    @apply text-center text-2xl font-bold text-very-dark-violet sm:text-3xl md:text-4xl;
+  }
+
+  .heroDesc {
+    @apply mx-auto mt-4 block text-center text-sm font-medium leading-6 text-grayish-violet md:text-base md:leading-7;
+    width: 40%;
+    @media (width < $md) {
+      width: 60%;
+    }
+    @media (width < $sm) {
+      width: 100%;
+    }
+  }
+
+  .cardsContainer {
+    @apply relative mt-16 flex flex-col items-start gap-x-8 gap-y-16 sm:mt-24 sm:flex-row;
+
+    .card {
+      @apply relative rounded-md bg-white px-5 pb-8 pt-14 lg:px-8 lg:pb-12 lg:pt-16;
+
+      .img {
+        @apply absolute -top-8 left-0 right-0 mx-auto flex h-16 w-16 items-center justify-center rounded-full bg-dark-Violet sm:-top-10 sm:left-auto sm:right-auto sm:h-20 sm:w-20;
+
+        img {
+          @apply w-8 sm:w-auto;
+        }
+      }
+
+      .title {
+        @apply block text-center text-xl font-semibold sm:text-start;
+      }
+
+      .desc {
+        @apply mt-4 block text-center text-sm text-grayish-violet sm:text-start;
+      }
+
+      &:nth-child(2) {
+        @apply sm:mt-12;
+      }
+      &:nth-child(3) {
+        @apply sm:mt-24;
+      }
+    }
+
+    &::before {
+      content: "";
+      @apply absolute left-0 right-0 top-0 mx-auto h-full w-2 bg-cyan sm:top-36 sm:h-2 sm:w-full;
     }
   }
 }
